--- a/project_kiwi/package.json
+++ b/project_kiwi/package.json
@@ -13,28 +13,30 @@
     "build": "quasar build"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "vue-i18n": "^9.2.2",
-    "pinia": "^2.0.11",
-    "@quasar/extras": "^1.16.4",
-    "quasar": "^2.16.0",
-    "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "@quasar/extras": "^1.16.12",
+    "axios": "^1.7.7",
+    "bson": "^6.8.0",
+    "pinia": "^2.2.2",
+    "quasar": "^2.17.0",
+    "vue": "^3.5.8",
+    "vue-i18n": "^9.14.0",
+    "vue-router": "^4.4.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "vite-plugin-checker": "^0.8.0",
-    "vue-tsc": "^2.0.29",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "vue-tsc": "^2.1.6",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "@types/node": "^20.5.9",
+    "eslint-plugin-import": "^2.30.0",
+    "@types/node": "^20.16.8",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
-    "@quasar/app-vite": "^2.0.0-beta.12",
-    "autoprefixer": "^10.4.2",
-    "typescript": "~5.5.3"
+    "@quasar/app-vite": "^2.0.0-beta.22",
+    "autoprefixer": "^10.4.20",
+    "typescript": "~5.5.4"
   },
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18",
