--- a/project_kiwi/.eslintignore
+++ b/project_kiwi/.eslintignore
@@ -5,3 +5,5 @@
 /node_modules
 .eslintrc.cjs
 /quasar.config.*.temporary.compiled*
+/src-pwa/custom-service-worker.ts
+/src-pwa/register-service-worker.ts
