--- a/project_kiwi/package.json
+++ b/project_kiwi/package.json
@@ -18,25 +18,33 @@
     "bson": "^6.8.0",
     "pinia": "^2.2.2",
     "quasar": "^2.17.0",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.5.8",
     "vue-i18n": "^9.14.0",
     "vue-router": "^4.4.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "vite-plugin-checker": "^0.8.0",
-    "vue-tsc": "^2.1.6",
-    "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.28.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.30.0",
-    "@types/node": "^20.16.8",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@quasar/app-vite": "^2.0.0-beta.22",
+    "@types/node": "^20.16.8",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "autoprefixer": "^10.4.20",
-    "typescript": "~5.5.4"
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-vue": "^9.28.0",
+    "typescript": "~5.5.4",
+    "vite-plugin-checker": "^0.8.0",
+    "vue-tsc": "^2.1.6",
+    "workbox-build": "^7.0.0",
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0"
   },
   "engines": {
     "node": "^24 || ^22 || ^20 || ^18",
