--- a/kiwi_cook/package.json
+++ b/kiwi_cook/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.12",
+    "@quasar/icongenie": "^4.0.0",
     "axios": "^1.7.7",
     "fuse.js": "^7.0.0",
     "pinia": "^2.2.2",
     "quasar": "^2.17.0",
     "register-service-worker": "^1.7.2",
+    "sharp": "^0.33.5",
     "stemmer": "^2.0.1",
     "vue": "^3.5.9",
     "vue-i18n": "^9.14.1",
