--- a/kiwi_cook/package.json
+++ b/kiwi_cook/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.12",
     "@quasar/icongenie": "^4.0.0",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.7",
     "fuse.js": "^7.0.0",
     "pinia": "^2.2.4",
