--- a/kiwi_cook_server/pyproject.toml
+++ b/kiwi_cook_server/pyproject.toml
@@ -29,6 +29,7 @@ argon2-cffi = "^23.1.0"
 pyjwt = "^2.9.0"
 rapidfuzz = "^3.10.1"
 pytest = "^8.3.3"
+fastapi-limiter = "^0.1.6"
 
 [tool.poetry.group.dev.dependencies]
 fastapi = "^0.115.2"
