--- a/kiwi_cook/.vscode/settings.json
+++ b/kiwi_cook/.vscode/settings.json
@@ -15,5 +15,8 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "[vue]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   }
 }
